View Issue Details

IDProjectCategoryView StatusLast Update
0033781Open CASCADEOCCT:Modeling Algorithmspublic2024-08-09 18:23
Reporteranv Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status verifiedResolutionfixed 
Target Version7.8.1Fixed in Version7.9.0 
Summary0033781: Modeling Algorithms - Using incorrect boundaries while traversing through triangulation
DescriptionUsing incorrect upper boundary leads to an exception while traversing through triangulation during scaling process
Steps To ReproduceNot required
TagsNo tags attached.
Test case numberNone

Relationships

has duplicate 0033705 closedbugmaster Community Modeling Algorithms - Fix array out of bounds access in BRepTools_TrsfModification 

Activities

git

2024-07-26 16:49

administrator   ~0116296

Branch CR33781 has been created by anv.

SHA-1: 35f1e45c875d487935ac53f0186fcd971e3b1f3f


Detailed log of new commits:

Author: anv
Date: Fri Jul 26 14:49:03 2024 +0100

    0033781: Modeling Algorithms - Using incorrect boundaries while traversing through triangulation
    
    Upper boundary updated for triangulation normals traversing.

anv

2024-07-29 13:10

developer   ~0116309

Incorrect upper border was used to traverse through mesh normals.

Branch with a fix:
OCCT - CR33781
PROD -

Tests show no regressions
http://jenkins-test-10.nnov.opencascade.com/view/CR33781-master-anv/view/TESTING/

Dear @dpasukhi, please review.

Issue History

Date Modified Username Field Change
2024-07-26 16:45 anv New Issue
2024-07-26 16:45 anv Assigned To => anv
2024-07-26 16:49 git Note Added: 0116296
2024-07-26 17:02 dpasukhi Project Internal => Open CASCADE
2024-07-29 13:10 anv Assigned To anv => dpasukhi
2024-07-29 13:10 anv Status new => resolved
2024-07-29 13:10 anv Steps to Reproduce Updated
2024-07-29 13:10 anv Note Added: 0116309
2024-07-29 14:04 dpasukhi Assigned To dpasukhi => bugmaster
2024-07-29 14:04 dpasukhi Status resolved => reviewed
2024-07-29 20:34 dpasukhi Relationship added has duplicate 0033705
2024-08-09 18:23 dpasukhi Status reviewed => verified
2024-08-09 18:23 dpasukhi Resolution open => fixed
2024-08-09 18:23 dpasukhi Fixed in Version => 7.9.0
2024-08-09 18:23 dpasukhi Test case number => None