0033781: Modeling Algorithms - Using incorrect boundaries while traversing through triangulation

Upper boundary updated for triangulation normals traversing.